# T-Bridge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  quick_build.sh  sim.conf
include/: cache.h  cache_components.h  typedefs.h
include/core/: cache.h  cache_components.h
include/utils/: clock.h  config_reader.h  program_options.h  trace_engine.h  trace_reader.h
src/: cache.cpp  cache_components.cpp  clock.cpp  config_reader.cpp  main.cpp  trace_engine.cpp
src/core/: cache.cpp  cache_components.cpp
src/utils/: clock.cpp  config_reader.cpp  program_options.cpp  trace_engine.cpp  trace_reader.cpp
traces/: example_input.trace
